--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -18,6 +22,7 @@
     "@types/react": "17.0.33",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "typescript": "4.4.4"
   }
 }
